[gd_scene load_steps=9 format=2]

[ext_resource path="res://GameVisuals.gd" type="Script" id=1]
[ext_resource path="res://GameLogic/GameLogicTimer.gd" type="Script" id=2]
[ext_resource path="res://GameLogic/NREGameLogic.gd" type="Script" id=3]
[ext_resource path="res://CameraPivot.gd" type="Script" id=4]
[ext_resource path="res://Assets/2D/HandZone.png" type="Texture" id=5]
[ext_resource path="res://Scripts/Map/WorldMap.tscn" type="PackedScene" id=6]
[ext_resource path="res://Scripts/Actors/Nomad.tscn" type="PackedScene" id=7]
[ext_resource path="res://Main.gd" type="Script" id=8]

[node name="NREGameContext" type="Spatial"]
script = ExtResource( 8 )

[node name="GameLogicTimer" type="Spatial" parent="."]
script = ExtResource( 2 )

[node name="NREGameLogic" type="Spatial" parent="GameLogicTimer"]
script = ExtResource( 3 )

[node name="GameVisuals" type="Spatial" parent="."]
script = ExtResource( 1 )

[node name="WorldMap" parent="." instance=ExtResource( 6 )]

[node name="Actors" type="Spatial" parent="."]

[node name="Nomad" parent="Actors" instance=ExtResource( 7 )]

[node name="CameraPivot" type="Position3D" parent="."]
script = ExtResource( 4 )

[node name="Camera" type="Camera" parent="CameraPivot"]
current = true

[node name="DirectionalLight" type="DirectionalLight" parent="."]
transform = Transform( 1, 0, 0, 0, -0.258819, 0.965926, 0, -0.965926, -0.258819, 0, 24, 0 )
light_color = Color( 1, 0.913725, 0.690196, 1 )
light_energy = 0.705
shadow_enabled = true

[node name="UI" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -1024.0
margin_bottom = -600.0

[node name="CardHand" type="Control" parent="UI"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="HandZone" type="Sprite" parent="UI/CardHand"]
position = Vector2( 490, 574 )
texture = ExtResource( 5 )
